fix (button block): button text wrap, prevent buttons from navigating within editor and added text alignment.  (#2200)
* Removed selector.

* Inserted conditional.

* added text align

--- a/src/styles/block.scss
+++ b/src/styles/block.scss
@@ -303,9 +303,6 @@
 }
 
 // Buttons.
-.stk-button {
-	width: max-content;
-}
 :is(.stk-block-button, .stk-block-icon-button, .stk-block-pagination, .stk-block-load-more, .stk-block-posts) {
 	&:not(.is-style-link) {
 		.stk-button {
